z-index fix

--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -7,6 +7,7 @@
     padding:20px;
     position: fixed;
     top: 0;
+    z-index: 100;
 }
 .navbarr .logo{
     width:40px;
